Fix overflow on booking card

--- a/ClientApp/app/payroll/booking.card/booking.card.css
+++ b/ClientApp/app/payroll/booking.card/booking.card.css
@@ -2,3 +2,9 @@
     color: gray;
     float: right;
 }
+
+.card-header {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
